Added some more files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,58 @@ filesystem/ext2/CBC_GCC-4.1.1-Mini.tar.bz2
 cbcui/cbcui
 cbcui/build/
 cbcui/Makefile
+kernel/microdia/sn9c20x.o
+kernel/microdia/ov965x.o
+kernel/microdia/ov7670.o
+kernel/microdia/ov7660.o
+kernel/microdia/mt9vx11.o
+kernel/microdia/microdia.o
+kernel/microdia/microdia.mod.o
+kernel/microdia/microdia.ko
+kernel/microdia/microdia-v4l.o
+
+kernel/microdia/microdia-usb.o
+kernel/microdia/.microdia-debugfs.o.cmd
+kernel/microdia/.microdia-decoder.o.cmd
+kernel/microdia/.microdia-dev.o.cmd
+kernel/microdia/.microdia-queue.o.cmd
+kernel/microdia/.microdia-sysfs.o.cmd
+kernel/microdia/.microdia-usb.o.cmd
+kernel/microdia/.microdia-v4l.o.cmd
+kernel/microdia/.microdia.ko.cmd
+kernel/microdia/.microdia.mod.o.cmd
+kernel/microdia/.microdia.o.cmd
+kernel/microdia/.mt9vx11.o.cmd
+kernel/microdia/.ov7660.o.cmd
+kernel/microdia/.ov7670.o.cmd
+kernel/microdia/.ov965x.o.cmd
+kernel/microdia/.sn9c20x.o.cmd
+kernel/microdia/.tmp_versions/
+kernel/microdia/microdia-debugfs.o
+kernel/microdia/microdia-decoder.o
+kernel/microdia/microdia-dev.o
+kernel/microdia/microdia-queue.o
+kernel/microdia/microdia-sysfs.o
+kernel/cbob/.cbob.o.cmd
+kernel/cbob/.cbob_analog.o.cmd
+kernel/cbob/.cbob_digital.o.cmd
+kernel/cbob/.cbob_main.o.cmd
+kernel/cbob/.cbob_pwm.o.cmd
+kernel/cbob/.cbob_sensors.o.cmd
+kernel/cbob/.cbob_spi.o.cmd
+kernel/cbob/.tmp_versions/
+kernel/cbob/cbob.ko
+kernel/cbob/cbob.mod.c
+kernel/cbob/cbob.mod.o
+kernel/cbob/cbob.o
+kernel/cbob/cbob_analog.o
+kernel/cbob/cbob_digital.o
+kernel/cbob/cbob_main.o
+kernel/cbob/cbob_pwm.o
+kernel/cbob/cbob_sensors.o
+kernel/cbob/cbob_spi.o
+kernel/k1.bin.zip
+kernel/linux-2.6.16-chumby-1.6.0.tar.gz
+kernel/linux-2.6.16-chumby-1.6.0/
+kernel/cbob/.cbob.mod.o.cmd
+kernel/cbob/.cbob.ko.cmd
