more updates to the cbob driver

--- a/kernel/cbob/Makefile
+++ b/kernel/cbob/Makefile
@@ -2,7 +2,9 @@ KERNEL_DIR=../linux-2.6.16-chumby-1.6.0
 
 obj-m += cbob.o
 
-cbob-objs := cbob_main.o cbob_spi.o cbob_digital.o cbob_analog.o cbob_pwm.o cbob_sensors.o
+cbob-objs := cbob_main.o cbob_spi.o cbob_digital.o 
+cbob-objs += cbob_analog.o cbob_pwm.o cbob_sensors.o 
+cbob-objs += cbob_accel.o cbob_servo.o cbob_pid.o
 
 all: build
 
@@ -10,7 +12,7 @@ clean:
 	rm -rf *.o *.ko
 	rm -rf *~
 	rm -rf *.mod.c
-	rm -rf .cbc_*
+	rm -rf .cbob*
 	rm -rf .tmp_*
 $(KERNEL_DIR):
 	make -C .. kernel
