More massive overhauls to the cbob driver and the cbcui

--- a/filesystem/vfat/Makefile
+++ b/filesystem/vfat/Makefile
@@ -5,7 +5,7 @@ DEST = $(CURDIR)/../kiss-vfat
 filesystem:
 	mkdir -p $(DEST)
 	(cd files; rsync -a userhook0 ext2.ko cbob.ko microdia.ko FIRMWARE_VERSION videodev.ko $(DEST))
-	(cd files; rsync -a rcS mkdev.sh mkfs.ext2 fsck.ext2 $(DEST))
+	(cd files; rsync -a rcS mkdev.sh mkfs.ext2 fsck.ext2 splash_screen.bin $(DEST))
 	mkdir -p $(DEST)/update2
 	(cd files; rsync -a k1.bin.zip $(DEST)/update2)
 	make -C $(FB_PRINT_DIR) DEST=$(DEST) install_filesystem
