--- a/kernel/cbob/Makefile
+++ b/kernel/cbob/Makefile
@@ -2,7 +2,7 @@ KERNEL_DIR=../linux-2.6.16-chumby-1.7.0
 
 obj-m += cbob.o
 
-cbob-objs := cbob_main.o cbob_spi.o cbob_digital.o 
+cbob-objs := cbob_main.o cbob_spi.o cbob_digital.o cbob_status.o
 cbob-objs += cbob_analog.o cbob_pwm.o cbob_sensors.o 
 cbob-objs += cbob_accel.o cbob_servo.o cbob_pid.o cbob_uart.o
 
