--- a/filesystem/vfat/Makefile
+++ b/filesystem/vfat/Makefile
@@ -6,7 +6,7 @@ MICRODIA_DIR = $(KERNEL_DIR)/microdia
 
 filesystem:
 	mkdir -p $(DEST)
-	(cd files; rsync -a userhook0 ext2.ko ../$(MICRODIA_DIR)/microdia.ko FIRMWARE_VERSION videodev.ko $(DEST))
+	(cd files; rsync -a userhook0 ext2.ko ../$(MICRODIA_DIR)/microdia.ko FIRMWARE_VERSION videodev.ko rt73.ko $(DEST))
 	(cd files; rsync -a rcS mkdev.sh mkfs.ext2 fsck.ext2 splash_screen.bin $(DEST))
 #	mkdir -p $(DEST)/update2
 #	(cd files; rsync -a k1.bin.zip $(DEST)/update2)
