Added a touch screen calibration button to the settings page. It kills the gui and starts the ts_calibrate screen. Once complete the cbcgui is restarted. Also cleaned up the start script and bumped the version to 2.2.0

--- a/filesystem/ext2/files/ts_vars.env
+++ b/filesystem/ext2/files/ts_vars.env
@@ -1,22 +1,8 @@
-#!/bin/sh
-
-KISS=/mnt/kiss
-QT=${KISS}/qt
-
 export TSLIB_TSDEVICE=/dev/input/event0
 export TSLIB_FBDEVICE=/dev/fb0
-export TSLIB_PLUGINDIR=${QT}/lib/ts
+export TSLIB_PLUGINDIR=/mnt/kiss/qt/lib/ts
 export TSLIB_CONSOLEDEVICE=/dev/ttyS0
-export TSLIB_CONFFILE=${QT}/etc/ts.conf
 export TSLIB_CALIBFILE=/psp/rfs1/pointercal
-export LD_LIBRARY_PATH=/lib:${QT}/lib
+export LD_LIBRARY_PATH=/lib:/mnt/kiss/qt/lib
 export POINTERCAL_FILE=${TSLIB_CALIBFILE}
 export QWS_MOUSE_PROTO=Tslib:/dev/input/event0
-
-if [ ! -e ${TSLIB_CALIBFILE} ]; then
-  ${QT}/bin/ts_calibrate
-  sync
-  sync
-fi
-
-$@
