CAUTION in the middle of filesystem restructure. Broken code

--- a/filesystem/ext2/Makefile
+++ b/filesystem/ext2/Makefile
@@ -1,12 +1,11 @@
 CBC_GCC=CBC_GCC-4.3.2-Mini
 CBC_GCC_TARFILE=$(CBC_GCC).tar.bz2
 SHARED_DIR=../../utils/shared_mem
-FIRMWARE_DIR=../../cbcui
+CBC_GUI_DIR=../../cbcui
 TRACK_DIR=../../userlib/tracklib
 LIBCBC_DIR=../../userlib/libcbc
 INIT_DIR=../../userlib/init
 
-#CBC_QT=CBC_Qt-4.5.2-Mini
 CBC_QT=CBC_Qt-4.7.1-Mini
 CBC_QT_TARFILE=$(CBC_QT).tar.bz2
 
@@ -33,25 +32,31 @@ $(CBC_QT_TARFILE):
 
 filesystem: gcc qt
 	mkdir -p $(DEST)
+
+        (cd files/gui; chmod a+x startup.sh shutdown.sh)
+        (cd files/usercode; chmod a+x gcc-usercode run stop compile compile-usb)
+
+        mkdir -p $(DEST)/usercode/include
+        mkdir -p $(DEST)/usercode/lib
+        mkdir -p $(DEST)/sounds
+        mkdir -p $(DEST)/images
+        mkdir -p $(DEST)/drivers
+        mkdir -p $(DEST)/gui
+        mkdir -p $(DEST)/config
+
+        (cd files; rsync -a usercode/* $(DEST)/usercode)
+        (cd files; rsync -a sounds/* $(DEST)/sounds)
+        (cd files; rsync -a images/* $(DEST)/images)
+        (cd files; rsync -a drivers/* $(DEST)/drivers)
+        (cd files; rsync -a gui/* $(DEST)/gui)
 	(cd gcc; rsync -a * $(DEST))
 	(cd qt; rsync -a * $(DEST))
-	#tar xvjf $(CBC_GCC_TARFILE) -C $(DEST)
-	#tar xvjf $(CBC_QT_TARFILE) -C $(DEST)
-	#rsync -a mnt/kiss/ $(DEST)
-
-	mkdir -p $(DEST)/usercode
-	mkdir -p $(DEST)/usercode/include
-	mkdir -p $(DEST)/usercode/lib
-
-	(cd files; chmod a+x startup.sh shutdown.sh gcc-usercode run stop compile compile-usb)
-	(cd files; rsync -a startup.sh ts_vars.env shutdown.sh $(DEST))
-	(cd files; rsync -a gcc-usercode run stop compile compile-usb mount-usb umount-usb $(DEST)/usercode)
-	(cd files; rsync -a gdb                                  $(DEST)/bin)
-	(cd files; rsync -a ts.conf                              $(DEST)/qt/etc)
+        (cd files; rsync -a ts_vars.env $(DEST))
+        (cd files; rsync -a gdb $(DEST)/bin)
+        (cd files; rsync -a ts.conf $(DEST)/qt/etc)
 
 	# First make sure libcbc is updated
 	make -C $(LIBCBC_DIR)
-  # Now copy
 	(cd $(LIBCBC_DIR); rsync -a libcbc.a              	       $(DEST)/usercode/lib)
 	(cd $(LIBCBC_DIR)/src; rsync -a cbcserial.h compat.h create.h $(DEST)/usercode/include)
 	(cd $(LIBCBC_DIR)/src; rsync -a process.h botball.h cbc.h  $(DEST)/usercode/include)
@@ -59,10 +64,8 @@ filesystem: gcc qt
 	make -C $(SHARED_DIR) DEST=$(DEST) install_filesystem
 	make -C $(TRACK_DIR) DEST=$(DEST) install_filesystem
 	make -C $(INIT_DIR) DEST=$(DEST) install_filesystem
-	make -C $(FIRMWARE_DIR)
-	rsync -a $(FIRMWARE_DIR)/cbcui $(DEST)
-	mkdir -p $(DEST)/sounds
-	(cd files; rsync -a sounds/*.wav $(DEST)/sounds)
+        make -C $(CBC_GUI_DIR)
+        rsync -a $(CBC_GUI_DIR)/cbcui $(DEST)/gui
 
 clean:
 	rm -rf ../kiss-ext2
