--- a/filesystem/upgrade/Makefile
+++ b/filesystem/upgrade/Makefile
@@ -1,34 +1,24 @@
 userhook0: userhook0.body make-userhook0.pl filesystems
-	ln -sf ../kiss-vfat/FIRMWARE_VERSION .
-	ln -sf ../kiss-vfat/fb_print .
-	ln -sf ../kiss-vfat/ext2.ko .
-	ln -sf ../kiss-vfat/mkfs.ext2 .
-	ln -sf ../kiss-vfat/rcS .
-	
-	ln -sf files/block_probe .
-	ln -sf files/mkdosfs .
-	ln -sf files/ptable.bin .
-	
-	tar -czf vfat.tgz -C ../kiss-vfat .
+        ln -sf ../kiss-ext2/FIRMWARE_VERSION .
+        ln -sf ../kiss-ext2/drivers/fb_print .
+        ln -sf ../kiss-ext2/drivers/ext2.ko .
+        ln -sf ../kiss-ext2/drivers/mkfs.ext2 .
+        ln -sf ../kiss-ext2/drivers/rcS .
+        ln -sf ../kiss-ext2/drivers/fdisk .
+
 	tar -czf ext2.tgz -C ../kiss-ext2 .
 	
-	./make-userhook0.pl fb_print ext2.ko vfat.tgz ext2.tgz rcS block_probe mkdosfs ptable.bin mkfs.ext2
+        ./make-userhook0.pl fb_print ext2.ko ext2.tgz rcS mkfs.ext2 fdisk
 	chmod a+x userhook0
-	mkdir -p tmp
-	cp -p userhook0 tmp/userhook0
-	tmp/userhook0 --extract
-
-foo:
-
-	ls -l userhook0
-	tar cvfh - FIRMWARE_VERSION fb_print ext2.ko vfat.tgz ext2.tgz > tmp.tar
-	cat tmp.tar >> userhook0
+        #mkdir -p tmp
+        #cp -p userhook0 tmp/userhook0
+        #tmp/userhook0 --extract
 
 filesystems:
 	make -C .. filesystems
 
 clean:
-	rm -rf vfat.tgz ext2.tgz userhook0 tmp
+        rm -rf ext2.tgz userhook0
 
 distclean: clean
-	rm -rf FIRMWARE_VERSION fb_print ext2.ko mkfs.ext2 rcS block_probe mkdosfs ptable.bin
+        rm -rf FIRMWARE_VERSION fb_print ext2.ko mkfs.ext2 rcS fdisk
