CAUTION in the middle of filesystem restructure. Broken code

--- a/filesystem/ext2/Makefile
+++ b/filesystem/ext2/Makefile
@@ -1,15 +1,22 @@
 CBC_GCC=CBC_GCC-4.3.2-Mini
 CBC_GCC_TARFILE=$(CBC_GCC).tar.bz2
-SHARED_DIR=../../utils/shared_mem
-CBC_GUI_DIR=../../cbcui
-TRACK_DIR=../../userlib/tracklib
-LIBCBC_DIR=../../userlib/libcbc
-INIT_DIR=../../userlib/init
 
 CBC_QT=CBC_Qt-4.7.1-Mini
 CBC_QT_TARFILE=$(CBC_QT).tar.bz2
 
-WGET=wget
+CBC_GUI_DIR=../../cbcui
+
+TRACK_DIR=../../userlib/tracklib
+LIBCBC_DIR=../../userlib/libcbc
+INIT_DIR=../../userlib/init
+
+FB_PRINT_DIR=../../utils/fb_print
+SHARED_DIR=../../utils/shared_mem
+
+KERNEL_DIR=../../kernel
+CBOB_DIR=$(KERNEL_DIR)/cbob
+MICRODIA_DIR=$(KERNEL_DIR)/microdia
+
 DEST=$(CURDIR)/../kiss-ext2
 
 all: filesystem
@@ -25,13 +32,13 @@ qt: $(CBC_QT_TARFILE)
 	touch qt
 
 $(CBC_GCC_TARFILE):
-	$(WGET) http://files.kipr.org/cbc/$(CBC_GCC_TARFILE)
+	wget http://files.kipr.org/cbc/$(CBC_GCC_TARFILE)
 
 $(CBC_QT_TARFILE):
-	$(WGET) http://files.kipr.org/cbc/$(CBC_QT_TARFILE)
+	wget http://files.kipr.org/cbc/$(CBC_QT_TARFILE)
 
 filesystem: gcc qt
-	mkdir -p $(DEST)
+		mkdir -p $(DEST)
 
         (cd files/gui; chmod a+x startup.sh shutdown.sh)
         (cd files/usercode; chmod a+x gcc-usercode run stop compile compile-usb)
@@ -49,22 +56,32 @@ filesystem: gcc qt
         (cd files; rsync -a images/* $(DEST)/images)
         (cd files; rsync -a drivers/* $(DEST)/drivers)
         (cd files; rsync -a gui/* $(DEST)/gui)
-	(cd gcc; rsync -a * $(DEST))
-	(cd qt; rsync -a * $(DEST))
-        (cd files; rsync -a ts_vars.env $(DEST))
+		(cd files; rsync -a config/* $(DEST)/config)
+		(cd gcc; rsync -a * $(DEST))
+		(cd qt; rsync -a * $(DEST))
         (cd files; rsync -a gdb $(DEST)/bin)
-        (cd files; rsync -a ts.conf $(DEST)/qt/etc)
-
-	# First make sure libcbc is updated
-	make -C $(LIBCBC_DIR)
-	(cd $(LIBCBC_DIR); rsync -a libcbc.a              	       $(DEST)/usercode/lib)
-	(cd $(LIBCBC_DIR)/src; rsync -a cbcserial.h compat.h create.h $(DEST)/usercode/include)
-	(cd $(LIBCBC_DIR)/src; rsync -a process.h botball.h cbc.h  $(DEST)/usercode/include)
-
-	make -C $(SHARED_DIR) DEST=$(DEST) install_filesystem
-	make -C $(TRACK_DIR) DEST=$(DEST) install_filesystem
-	make -C $(INIT_DIR) DEST=$(DEST) install_filesystem
-        make -C $(CBC_GUI_DIR)
+		(cd files; rsync -a rcS $(DEST))
+		(cd files; rsync -a userhook0 $(DEST))
+		(cd files; rsync -a FIRMWARE_VERSION $(DEST))
+		
+		# kernel CBOB and camera modules
+		make -C $(KERNEL_DIR)
+		(cd $(CBOB_DIR); rsync -a cbob.ko $(DEST)/drivers)
+		(cd $(MICRODIA_DIR); rsync -a microdia.ko $(DEST)/drivers)
+		
+		make -C $(SHARED_DIR) DEST=$(DEST)/usercode/lib install_filesystem
+		make -C $(TRACK_DIR) DEST=$(DEST) install_filesystem
+		make -C $(INIT_DIR) DEST=$(DEST)/usercode/lib install_filesystem
+		make -C $(FB_PRINT_DIR) DEST=$(DEST)/drivers install_filesystem
+		
+		# CBC library
+		make -C $(LIBCBC_DIR)
+		(cd $(LIBCBC_DIR); rsync -a libcbc.a              	       $(DEST)/usercode/lib)
+		(cd $(LIBCBC_DIR)/src; rsync -a cbcserial.h compat.h create.h $(DEST)/usercode/include)
+		(cd $(LIBCBC_DIR)/src; rsync -a process.h botball.h cbc.h  $(DEST)/usercode/include)
+        
+		# CBC graphical interface
+		make -C $(CBC_GUI_DIR)
         rsync -a $(CBC_GUI_DIR)/cbcui $(DEST)/gui
 
 clean:
