CAUTION filesystem upgrading unstable code

--- a/filesystem/upgrade/Makefile
+++ b/filesystem/upgrade/Makefile
@@ -1,13 +1,11 @@
 userhook0: userhook0.body make-userhook0.pl filesystems
 	ln -sf ../kiss-ext2/FIRMWARE_VERSION .
-	ln -sf ../kiss-ext2/drivers/ext2.ko .
 	ln -sf ../kiss-ext2/drivers/fb_print .
-	ln -sf ../kiss-ext2/drivers/mkfs.ext2 .
 	ln -sf ../../utils/block_probe/block_probe .
 
 	tar -czf ext2.tgz -C ../kiss-ext2 .
 
-	./make-userhook0.pl fb_print ext2.ko ext2.tgz mkfs.ext2 ptable.bin block_probe
+	./make-userhook0.pl fb_print ext2.ko ext2.tgz mkfs.ext2 mkdosfs ptable.bin block_probe
 	chmod a+x userhook0
         #mkdir -p tmp
         #cp -p userhook0 tmp/userhook0
@@ -17,4 +15,4 @@ filesystems:
 	make -C ../ext2
 
 clean:
-	rm -rf ext2.tgz userhook0 FIRMWARE_VERSION ext2.ko mkfs.ext2 block_probe fb_print 
+	rm -rf ext2.tgz userhook0 FIRMWARE_VERSION block_probe fb_print 
