CAUTION file system update in progress. The system appears to be back up and running however a new rfs1.bin.zip and k1.bin.zip are need for everything to work. As soon as everything is verified as working all files will be posted.

--- a/filesystem/ext2/files/config/ts_vars.env
+++ b/filesystem/ext2/files/config/ts_vars.env
@@ -1,6 +1,7 @@
 export TSLIB_TSDEVICE=/dev/input/event0
 export TSLIB_FBDEVICE=/dev/fb0
 export TSLIB_PLUGINDIR=/mnt/kiss/qt/lib/ts
+export TSLIB_CONFFILE=/mnt/kiss/config/ts.conf
 export TSLIB_CONSOLEDEVICE=/dev/ttyS0
 export TSLIB_CALIBFILE=/psp/pointercal
 export LD_LIBRARY_PATH=/lib:/mnt/kiss/qt/lib
