--- a/filesystem/upgrade/Makefile
+++ b/filesystem/upgrade/Makefile
@@ -6,14 +6,14 @@ userhook0: userhook0.body make-userhook0.pl filesystems
 
 #	tar -czf ext2.tgz -C ../kiss-ext2 .
 
-	tar -czf config.tgz -C ../kiss-ext2/config .
-	tar -czf drivers.tgz -C ../kiss-ext2/drivers .
-	tar -czf gui.tgz -C ../kiss-ext2/gui .
-	tar -czf images.tgz -C ../kiss-ext2/images .
-	tar -czf sounds.tgz -C ../kiss-ext2/sounds .
-	tar -czf usercode.tgz -C ../kiss-ext2/usercode .
-	tar -czf qt.tgz -C ../kiss-ext2/qt .
-	tar -czf gcc.tgz -C ../kiss-ext2/gcc .
+	tar -czf config.tgz -C ../kiss-ext2/ config
+	tar -czf drivers.tgz -C ../kiss-ext2/ drivers
+	tar -czf gui.tgz -C ../kiss-ext2/ gui
+	tar -czf images.tgz -C ../kiss-ext2/ images
+	tar -czf sounds.tgz -C ../kiss-ext2/ sounds
+	tar -czf usercode.tgz -C ../kiss-ext2/ usercode
+	tar -czf qt.tgz -C ../kiss-ext2/ qt 
+	tar -czf gcc.tgz -C ../kiss-ext2/ gcc
 	
 	./make-userhook0.pl block_probe fb_print ext2.ko mkfs.ext2 mkdosfs ptable.bin cbc_boot config.tgz drivers.tgz gui.tgz images.tgz sounds.tgz usercode.tgz qt.tgz gcc.tgz
  
