Added usb-serial adapter page under utilities

--- a/filesystem/ext2/files/config/ts_vars.env
+++ b/filesystem/ext2/files/config/ts_vars.env
@@ -7,3 +7,4 @@ export TSLIB_CALIBFILE=/psp/pointercal
 export LD_LIBRARY_PATH=/lib:/mnt/kiss/qt/lib
 export POINTERCAL_FILE=${TSLIB_CALIBFILE}
 export QWS_MOUSE_PROTO=Tslib:/dev/input/event0
+export QWS_KEYBOARD=CBCKbdInput:/dev/input/event1
