--- a/filesystem/upgrade/Makefile
+++ b/filesystem/upgrade/Makefile
@@ -7,6 +7,7 @@ cbc_interface: cbc_interface.body make-cbc_interface.pl filesystems
 
 	tar -czf config.tgz -C ../kiss-ext2/ config
 	tar -czf drivers.tgz -C ../kiss-ext2/ drivers
+	tar -czf wifi.tgz -C ../kiss-ext2/ wifi
 	tar -czf gui.tgz -C ../kiss-ext2/ gui
 	tar -czf images.tgz -C ../kiss-ext2/ images
 	tar -czf sounds.tgz -C ../kiss-ext2/ sounds
@@ -14,7 +15,7 @@ cbc_interface: cbc_interface.body make-cbc_interface.pl filesystems
 	tar -czf qt.tgz -C ../kiss-ext2/ qt 
 	tar -czf gcc.tgz -C ../kiss-ext2/ gcc
 
-	./make-cbc_interface.pl $(UPGRADEFILE) block_probe fb_print ext2.ko mkfs.ext2 mkdosfs ptable.bin cbc_boot config.tgz drivers.tgz gui.tgz images.tgz sounds.tgz usercode.tgz qt.tgz gcc.tgz
+	./make-cbc_interface.pl $(UPGRADEFILE) block_probe fb_print ext2.ko mkfs.ext2 mkdosfs ptable.bin cbc_boot config.tgz drivers.tgz wifi.tgz gui.tgz images.tgz sounds.tgz usercode.tgz qt.tgz gcc.tgz
 
 	 chmod a+x $(UPGRADEFILE)
 
