Edited some makefiles to get the rt73 wifi driver and build the block_probe util.

--- a/filesystem/ext2/Makefile
+++ b/filesystem/ext2/Makefile
@@ -42,7 +42,7 @@ filesystem: gcc qt
 
 	(cd files/gui; chmod a+x startup.sh shutdown.sh)
 	(cd files/usercode; chmod a+x gcc-usercode run stop compile compile-usb)
-	(cd files/wifi; chmod a+x wifi_scan.sh)
+	(cd files/wifi; chmod a+x wifi_scan.pl wifi_signal.pl wifi_connected.pl wifi_ip.pl wifi_start.pl)
 
 	mkdir -p $(DEST)/usercode/include
 	mkdir -p $(DEST)/usercode/lib
